--- a/release_notes.txt
+++ b/release_notes.txt
@@ -2,3 +2,4 @@
 01.09.2024 version 0.11 modified imports
 01.09.2024 version 0.12 sfp media temperature change logging
 10.09.2024 version 0.2 request status corruption tag
+12.09.2024 version 0.21 beta version
