--- a/release_notes.txt
+++ b/release_notes.txt
@@ -3,3 +3,4 @@
 01.09.2024 version 0.12 sfp media temperature change logging
 10.09.2024 version 0.2 request status corruption tag
 12.09.2024 version 0.21 beta version
+10.10.2024 version 0.22 enabled g-port counter fix
