--- a/release_notes.txt
+++ b/release_notes.txt
@@ -4,3 +4,4 @@
 10.09.2024 version 0.2 request status corruption tag
 12.09.2024 version 0.21 beta version
 10.10.2024 version 0.22 enabled g-port counter fix
+11.10.2024 version 0.23 port name in log correction 
