--- a/release_notes.txt
+++ b/release_notes.txt
@@ -5,4 +5,5 @@
 12.09.2024 version 0.21 beta version
 10.10.2024 version 0.22 enabled g-port counter fix
 11.10.2024 version 0.23 port name in log correction
-24.10.2024 version 0.3 switch log save and load, gauge port label contains 'port-name' value  
+24.10.2024 version 0.3 switch log save and load, gauge port label contains 'port-name' value
+27.10.2024 version 0.31 port-index added to port path
