--- a/release_notes.txt
+++ b/release_notes.txt
@@ -5,6 +5,8 @@
 12.09.2024 version 0.21 beta version
 10.10.2024 version 0.22 enabled g-port counter fix
 11.10.2024 version 0.23 port name in log correction
-24.10.2024 version 0.3 switch log save and load, gauge port label contains 'port-name' value
+24.10.2024 version 0.3 switch log saved and loaded, gauge port label contains 'port-name' value
 27.10.2024 version 0.31 port-index added to port path
-02.11.2024 version 0.32 log id added to the logtoolbar
+02.11.2024 version 0.32 log id added to the log toolbar
+07.11.2024 version 0.33 log id is saved permanently to the log file
+11.11.2024 version 0.34 global switch port status ids
